2012-01-31 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-06
	* Better implementation of SinglePathPrescaleTable and PrescaleTableService 
	  in different files, using class inheritance, and proper names.
	* Fix interference with the original prescale editor.

2012-01-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-05
	* Clear documentation panel (right upper panel) when a configuration is closed.
	* Make prescales table editable in documentation panel. (bug/feature 89524).
	* Add autosave for prescales embedded in documentation panel.

2012-01-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-04
	* Fix EventContent editor in Right Upper Panel. No panels were displayed
	  after clicking an EventContent.
	* Improves documentation fields panel to take up the maximum size.
	
2012-01-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-03
	* Add quotation marks to empty VInputTag values. bug #90850.
	
2012-01-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-02
	* Change host name for TEST2R setup to int2r1-s.cern.ch

2012-01-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-01
	* Clean up the code according to new requirements for feat.75950/89524.
	* Update SQL scripts with new table definitions.
	* Add PLSQL file under /sql/ with procedures to revoke and restore privileges.

2011-01-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* Not tagged.
	* Use a separate tmp table to store CLOBs in the PLSQL. (test).
		NOTE: This only affects to databases with long string support.
		
2011-01-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* Not tagged.
	* Change SQL query to retrieve Clobs from tmp_string_table
		according to the new PLSQL "load_parameter_values" (test).
	
2012-01-11 Martin Grunewald <Martin.Grunewald@cern.ch>
	* tag V01-06-00
	* export untracked parameters regardless of whether they